# monorepo-template

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Justfile  package.json  turbo.json
.claude/docs/: architecture.md  dependency-graph.md
.github/workflows/: ci.yml  update-docs.yml
apps/api/: CLAUDE.md  main.py  pyproject.toml
apps/api/tests/integration/: conftest.py
apps/api/tests/unit/: test_health.py
apps/web/: CLAUDE.md  next.config.ts  package.json
apps/web/src/app/: layout.tsx  page.test.tsx  page.tsx
docs/: agent-instructions.md  pr-auto-approval.md
proto/: CLAUDE.md  buf.gen.yaml
proto/common/v1/: common.proto
proto/user/v1/: user.proto
supabase/: CLAUDE.md  config.toml  seed.sql
supabase/migrations/: 00000000000000_init.sql
